--- a/css/result.css
+++ b/css/result.css
@@ -2,56 +2,87 @@
 body {
     font-family: Arial, sans-serif; /* Define a fonte da página */
     background-color: #f4f4f4; /* Cor de fundo da página */
+    color: #333; /* Cor do texto */
     display: flex; /* Para centralizar o conteúdo */
     flex-direction: column; /* Para organizar em coluna */
     align-items: center; /* Centraliza horizontalmente */
     justify-content: center; /* Centraliza verticalmente */
     margin: 0; /* Remove margens padrão */
-    padding: 20px; /* Adiciona um espaço interno de 20 pixels */
+    padding: 10px; /* Adiciona um espaço interno de 10 pixels */
 }
 
 /* Estilo para a imagem do logotipo */
 .logo {
     display: block; /* Define o display como bloco para centralizar */
     margin: 0 auto; /* Centraliza horizontalmente a imagem */
-    width: 1000px; /* Define a largura da imagem */
+    width: 700px; /* Define a largura da imagem */
     height: auto; /* Mantém a proporção da imagem */
-    margin-bottom: 20px; /* Espaço abaixo da imagem */
+    margin-bottom: 10px; /* Espaço abaixo da imagem */
 }
 
 /* Estilo para a seção de informações do Pokémon */
 .pokemon-info {
+    display: flex; /* Organiza os elementos horizontalmente */
+    justify-content: space-between; /* Espaço entre as colunas */
+    align-items: flex-start; /* Alinha os itens ao topo da linha */
     background-color: #fff; /* Cor de fundo branca */
     font-weight: bold; /* Deixa o texto mais forte */
     border-radius: 8px; /* Bordas arredondadas */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra sutil ao redor da caixa */
-    padding: 10px; /* Espaço interno da caixa */
-    max-width: 600px; /* Largura máxima da caixa */
-    margin: 10px auto; /* Centraliza a caixa na página com margem em cima e embaixo */
-    text-align: center; /* Alinha o texto ao centro */
+    padding: 20px; /* Espaço interno da caixa */
+    max-width: 900px; /* Largura máxima da caixa */
+    margin: 20px auto; /* Centraliza a caixa na página com margem em cima e embaixo */
 }
 
-/* Estilo para o sprite do Pokémon*/
+/* Estilo para a coluna de informações do Pokémon */
+.pokemon-details {
+    margin-right: 35px;
+    margin-left: 20px;
+    display: flex; /* Organiza os elementos horizontalmente */
+    flex-direction: column; /* Organiza as informações do Pokémon em formato vertical */
+    align-items: center; /* Alinha as informações ao centro horizontal */
+    text-align: center; /* Garante que o texto esteja centralizado */
+}
+
+/* Estilo para a imagem do Pokémon */
 .pokemon-sprite {
-    width: 200px; /* Defina a largura desejada do sprite */
-    height: auto; /* Mantém a proporção */
-    margin-top: 10px; /* Espaço acima da imagem */
+    width: 150px; /* Tamanho da imagem do Pokémon */
+    height: 150px; /* Tamanho da imagem do Pokémon */
+    object-fit: contain; /* Garante que a imagem seja contida dentro da área definida */
+    margin-top: 10px; /* Espaço entre as informações e a imagem */
+}
+
+/* Estilo para a coluna da carta do TCG */
+.pokemon-card {
+    margin-left: 35px;
+    margin-right: 20px;
+    display: flex; /* Organiza os elementos horizontalmente */
+    flex-direction: column; /* Organiza as informações da carta de TCG em formato vertical */
+    align-items: center; /* Alinha as informações ao centro */
+    text-align: center; /* Garante que o texto da carta esteja centralizado */
+}
+
+/* Estilo para a imagem da carta de TCG */
+#card-image {
+    width: 400px; /* Tamanho da imagem da carta */
+    height: 300px; /* Tamanho da imagem da carta */
+    object-fit: contain; /* Garante que a imagem seja contida dentro da área definida */
+    margin-top: 10px; /* Espaço entre o nome da carta e a imagem */
 }
 
 /* Estilo para o título principal */
-h1 {
+h4 {
     color: #3466AF; /* Cor YInMn Blue */
     font-size: 2em; /* Tamanho da fonte */
     font-weight: bold; /* Deixa o texto mais forte */
 }
 
 /* Estilo para o subtítulo */
-h2 {
-    color: #3466AF; /* Cor YInMn Blue */
-    font-size: 1.5em; /* Tamanho da fonte */
-    font-weight: bold; /* Deixa o texto mais forte */
-    margin-top: 20px; /* Espaço acima do subtítulo */
-}
+/*h2 {
+    /*color: #3466AF; /* Cor YInMn Blue */
+    /*font-size: 1.5em; /* Tamanho da fonte */
+    /*font-weight: bold; /* Deixa o texto mais forte */
+/*}
 
 /* Estilo para parágrafos */
 p {
@@ -64,14 +95,6 @@ p {
 img {
     max-width: 100%; /* Limita a largura da imagem ao máximo do contêiner */
     height: auto; /* Mantém a proporção da imagem */
-    margin-top: 10px; /* Espaço acima da imagem */
-}
-
-/* Estilo para a carta do Pokémon TCG */
-#card-image {
-    width: 500px; /* Ajuste o valor conforme necessário */
-    height: auto; /* Para manter a proporção */
-    object-fit: contain; /* Para manter a proporção sem distorcer */
     margin-top: 10px; /* Espaço acima da imagem */
 }
 
